--- a/gb/23/4/20/n13976897.md
+++ b/gb/23/4/20/n13976897.md
@@ -1,65 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>沙尘暴再来 甘肃玉门现沙墙 宁夏行走困难</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976923-GettyImages-1474852724-600x400.jpg" />
 <h6>2023年3月20日，甘肃张掖遭遇沙尘暴，当地出现沙墙。（Wang Chao/VCG via Getty Images △）
 </h6>
 <hr>
-	<p>【大纪元2023年04月20日讯】（大纪元记者萧律生报导）4月19日，甘肃、宁夏、内蒙古等多省市遭遇<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%99%E5%B0%98%E6%9A%B4.md#1">沙尘暴</a>。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E7%8E%89%E9%97%A8.md#1">甘肃玉门</a>一带出现“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%99%E5%A2%99.md#1">沙墙</a>”。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%81%E5%A4%8F%E4%B8%AD%E5%8D%AB.md#1">宁夏中卫</a>的人们被大风吹得睁不开眼，行走困难。</p>
-<p>19日晚间，大陆中央气象台发布<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%99%E5%B0%98%E6%9A%B4.md#1">沙尘暴</a>预警，预计19日晚间8时至20日晚间8时，内蒙古中西部、新疆南部和东部、青海西部、甘肃大部、宁夏、陕西中北部、山西、河北西部、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC.md#1">北京</a>等地的部分地区持续沙尘天气。其中，新疆南部、甘肃东部、宁夏中部、陕西北部等地局部有沙尘暴。</p>
+	<p>【大纪元2023年04月20日讯】（大纪元记者萧律生报导）4月19日，甘肃、宁夏、内蒙古等多省市遭遇沙尘暴。甘肃玉门一带出现“沙墙”。宁夏中卫的人们被大风吹得睁不开眼，行走困难。</p>
+<p>19日晚间，大陆中央气象台发布沙尘暴预警，预计19日晚间8时至20日晚间8时，内蒙古中西部、新疆南部和东部、青海西部、甘肃大部、宁夏、陕西中北部、山西、河北西部、北京等地的部分地区持续沙尘天气。其中，新疆南部、甘肃东部、宁夏中部、陕西北部等地局部有沙尘暴。</p>
 <p>综合陆媒19日报导，18日起，甘肃省河西地区普遍遭遇沙尘暴天气，酒泉、嘉峪关、武威、张掖等地相继出现能见度小于1000米的沙尘暴天气。</p>
-<p>网民拍摄视频显示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E7%8E%89%E9%97%A8.md#1">甘肃玉门</a>19日傍晚出现一堵巨型“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%99%E5%A2%99.md#1">沙墙</a>”，高达百米，酒泉鸣沙山观星的游客返回时因遭遇沙尘暴，不得不使用手电筒照明前行。</p>
+<p>网民拍摄视频显示，甘肃玉门19日傍晚出现一堵巨型“沙墙”，高达百米，酒泉鸣沙山观星的游客返回时因遭遇沙尘暴，不得不使用手电筒照明前行。</p>
 <p>游客姜女士表示，在看星星时突然遭遇沙尘暴，风沙太大、视线很差，开始时很恐慌，为了安全，游客们纷纷用手机手电筒照明。</p>
-<p>监测显示，19日早上10时，沙尘已抵达甘肃白银、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%81%E5%A4%8F%E4%B8%AD%E5%8D%AB.md#1">宁夏中卫</a>一带。甘肃武威、金昌、张掖等多地空气质量指数（AQI）爆表，宁夏吴忠、中卫的空气质量指数也处于爆表状态，主要污染物是PM10。宁夏中卫PM10达到2614微克/立方米。</p>
+<p style="text-align: center;"><a title="2023年4月19日，甘肃省兰州市、酒泉、张掖等多地遭遇沙尘暴，其中玉门出现“沙墙”，酒泉鸣沙山观星的游客需要举着手电筒才能返回。" src="https://www.ganjing.com/embed/1fpnue1jvbt5TJ3NfN3mTzNXE1pp1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>监测显示，19日早上10时，沙尘已抵达甘肃白银、宁夏中卫一带。甘肃武威、金昌、张掖等多地空气质量指数（AQI）爆表，宁夏吴忠、中卫的空气质量指数也处于爆表状态，主要污染物是PM10。宁夏中卫PM10达到2614微克/立方米。</p>
 <p>报导称，甘肃兰州城关区遭遇沙尘，天空昏黄，街头行人或戴口罩，或以手遮挡。截止19日下午2时，兰州中川机场因沙尘暴取消35班次航班，进港航班备降他场22班。夏中卫地区的工业园区的人们被大风吹得睁不开眼，行走时都困难。</p>
-<figure id="attachment_13976922" aria-describedby="caption-attachment-13976922" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13976922-GettyImages-1475077051.jpg"><img class="size-large wp-image-13976922" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976922-GettyImages-1475077051-600x400.jpg" alt="2023年3月21日，甘肃兰州遭遇沙尘暴。（VCG/VCG via Getty Images △）" width="600" b="400" /></a><figcaption id="caption-attachment-13976922" class="wp-caption-text">2023年3月21日，甘肃兰州遭遇沙尘暴。（VCG/VCG via Getty Images △）</figcaption></figure>
+<figure id="attachment_13976922" aria-describedby="caption-attachment-13976922" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13976922-GettyImages-1475077051.jpg"><img decoding="async" class="size-large wp-image-13976922" src="https://i.epochtimes.com/assets/uploads/2023/04/id13976922-GettyImages-1475077051-600x400.jpg" alt="2023年3月21日，甘肃兰州遭遇沙尘暴。（VCG/VCG via Getty Images △）" width="600" b="400" /></a><figcaption id="caption-attachment-13976922" class="wp-caption-text">2023年3月21日，甘肃兰州遭遇沙尘暴。（VCG/VCG via Getty Images △）</figcaption></figure>
 <p>随着冷空气东移，沙尘影响将向东扩展，内蒙古大部、华北北部、东北中西部等地也有沙尘天气。</p>
-<p>内蒙古19日当天多地遭遇沙尘暴。呼和浩特一位市民说，上午还阳光明媚，下午就黄沙漫天。报头一位市民说，今次的风沙特别大，人走也走不动，“坐在车里都感觉车身在摇晃”。内蒙古气象台预计，未来十天，部分时段仍有大风沙尘天气。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC.md#1">北京</a>也会受影响。北京市气象台19日发布大风预警称，预计20日凌晨2时至晚上8时，北京有4、5级偏北风，阵风7、8级，伴有扬沙。</p>
+<p>内蒙古19日当天多地遭遇沙尘暴。呼和浩特一位市民说，上午还阳光明媚，下午就黄沙漫天。包头一位市民说，今次的风沙特别大，人走也走不动，“坐在车里都感觉车身在摇晃”。内蒙古气象台预计，未来十天，部分时段仍有大风沙尘天气。</p>
+<p>北京也会受影响。北京市气象台19日发布大风预警称，预计20日凌晨2时至晚上8时，北京有4、5级偏北风，阵风7、8级，伴有扬沙。</p>
 <p>陕西省气象台19日沙尘暴预警显示，榆林市西部县区已出现沙尘暴，预计榆林市榆阳区、横山区、神木市等9个地区未来12小时内将出现沙尘暴天气。网传视频显示，19日，西安市沙尘暴来袭，一眼望去远处都是灰濛濛一片，网民表示“空气中都是沙土味”。</p>
-<p>今年3月以来，中国已遭遇多次沙尘暴。据官方18日发布的消息，4月9日以来的沙尘暴影响到20余省市区，导致包括长春、乌鲁木齐、大连、哈尔滨、呼和浩特、兰州、天津等地机场120余班返航备降。</p>
+<figure id="attachment_13977239" aria-describedby="caption-attachment-13977239" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13977239-GettyImages-1252007449.jpg"><img decoding="async" class="size-large wp-image-13977239" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977239-GettyImages-1252007449-600x400.jpg" alt="2023年4月20日，陕西西安市遭遇沙尘暴。（CFOTO/Future Publishing via Getty Images △）" width="600" b="400" /></a><figcaption id="caption-attachment-13977239" class="wp-caption-text">2023年4月20日，陕西西安市遭遇沙尘暴。（CFOTO/Future Publishing via Getty Images △）</figcaption></figure>
+<p style="text-align: center;"><a title="2023年4月19日，陕西西安沙尘暴来袭，远处灰濛濛，空气中都是沙土味。 " src="https://www.ganjing.com/zh-TW/embed/1fpnrj137ki57JevwX0ELtbKf1dv1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>今年3月以来，中国已多次遭遇沙尘暴。据官方18日发布的消息，4月9日以来的沙尘暴影响到20余省市区，导致包括长春、乌鲁木齐、大连、哈尔滨、呼和浩特、兰州、天津等地机场120余班返航备降。</p>
 <p>责任编辑：李沐恩#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976633.md#1">亚洲多国高温破纪录 云南气温超42摄氏度</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976449.md#1">河南外卖小哥身绑树枝挂吊瓶送餐 网民：心酸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976359.md#1">长峰医院护工：从顶层顺水管往下爬 死里逃生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976373.md#1">【晚间新闻】北京大火数十人罹难 纽约车场倒塌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308556.md#1">甘肃敦煌开演唱会 沙尘暴突来袭 万人逃离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308402.md#1">中共火箭解体产生数百碎片 逾千卫星面临危险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308369.md#1">获称“最帅少林武僧” 21岁秋风车祸身亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308365.md#1">两天四名中共省部级高官及高级将领病亡</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/18/n7908087.md#1" target="_blank">三次听法轮功真相 大陆公安腿病神奇康复</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/14/n13973040.md#1">【百年真相】北平和谈第一功臣 为何祸及三代？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973563.md#1">【未解之谜】血型中的创世之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968604.md#1">济公和尚破衣破扇 如何大显神通？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971175.md#1">【天道有知】天知道！改邪归正为何儿子反遭祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973255.md#1">从彼得兔到兔儿爷，一路陪伴，危难救助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976739.md#1">【新唐人大视野】美菲军演 习南海舰队训话泄秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976493.md#1">【时事金扫描】普泽前线对阵？瓦格纳打退堂鼓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976561.md#1">【拍案惊奇】农管再刮民脂 中共巧立名目创收</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975276.md#1">为何中国亿万富翁一个个地消失</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975905.md#1">分享邓超与女儿相处趣事 孙俪：这爸爸真可以</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974820.md#1">中国经济低迷 大学毕业生在家“啃老”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975905.md#1">分享邓超与女儿相处趣事 孙俪：这爸爸真可以</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975247.md#1">黄晓明上节目执意穿皮鞋比赛 鞋底厚度引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975159.md#1">念不出金像奖获奖者大名 香港颁奖明星陷尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975204.md#1">分手4年突按赞有关李晨帖文 范冰冰发文回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975100.md#1">哈林揪5队员环台 被爆料与卜学亮“吵全程”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974855.md#1">你的小孩是天才吗？ 专家：可从5个迹象判断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968965.md#1">虾青素防眼病更佳 6种护眼顶级食物不可错过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975539.md#1">抚养几个小孩的父母分享推文 让人会心一笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975003.md#1">3种自然疗法抗过敏 疗效强大堪比激素药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975025.md#1">泡菜吃法竟有这么多 你试过了吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308427.md#1">【漂流传奇】私房菜厨师：英国市集创业大公开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306785.md#1">Costco再次打击非会员 这次是在入口处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306829.md#1">陈梦战胜孙颖莎 球迷喝倒彩 背后黑幕重重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/20/n13976897.htm">沙尘暴再来 甘肃玉门现沙墙 宁夏行走困难</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/20/n13976897.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/20/n13976897.htm">沙尘暴再来 甘肃玉门现沙墙 宁夏行走困难</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/20/n13976897.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
